src/objects/Allocate_Appointment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Setting for Face to face And Phone broker</description>
    <fields>
        <fullName>Buffer__c</fullName>
        <description>The time difference between two appointment</description>
        <inlineHelpText>The time difference between two appointment</inlineHelpText>
        <label>Buffer</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayEndTime__c</fullName>
        <label>DayEndTime</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayStartTime__c</fullName>
        <label>DayStartTime</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationOfMeeting__c</fullName>
        <description>The length of meeting</description>
        <inlineHelpText>The length of meeting</inlineHelpText>
        <label>DurationOfMeeting</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DynamicTimeOffset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if want to use dynamic time offset</description>
        <label>Dynamic Time Offset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntervalOfMeeting__c</fullName>
        <description>the slot difference, e.g. 15 min will make the appointment allocation page have available time as pick list with 15 min difference for consecutive available slot.</description>
        <inlineHelpText>the slot difference, e.g. 15 min will make the appointment allocation page have available time as pick list with 15 min difference for consecutive available slot.</inlineHelpText>
        <label>IntervalOfMeeting</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Allocate_Appointment</label>
</CustomObject>